--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
-	}
+  "name": "obsidian-sample-plugin",
+  "version": "1.0.0",
+  "description": "Daggerheart UI Toolkit for Obsidian",
+  "main": "main.js",
+  "scripts": {
+    "dev:css": "node scripts/build-css.mjs --watch",
+    "dev:js": "esbuild src/main.ts --bundle --outfile=main.js --format=cjs --platform=node --external:obsidian --jsx=automatic --watch",
+    "dev": "concurrently -k -n CSS,JS \"npm:dev:css\" \"npm:dev:js\"",
+    "build:css": "node scripts/build-css.mjs",
+    "build": "npm run build:css && esbuild src/main.ts --bundle --outfile=main.js --format=cjs --platform=node --external:obsidian --jsx=automatic"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "builtin-modules": "3.3.0",
+    "chokidar": "^3.6.0",
+    "concurrently": "^9.0.0",
+    "esbuild": "^0.25.11",
+    "fast-glob": "^3.3.2",
+    "obsidian": "latest",
+    "tslib": "2.4.0",
+    "typescript": "4.7.4"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "yaml": "^2.6.0"
+  }
 }
