Doc update to vitepress 1.0

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev:js": "esbuild src/main.ts --bundle --outfile=main.js --format=cjs --platform=node --external:obsidian --jsx=automatic --watch",
     "dev": "concurrently -k -n CSS,JS \"npm:dev:css\" \"npm:dev:js\"",
     "build:css": "node scripts/build-css.mjs",
-    "build": "npm run build:css && esbuild src/main.ts --bundle --outfile=main.js --format=cjs --platform=node --external:obsidian --jsx=automatic"
+    "build": "npm run build:css && esbuild src/main.ts --bundle --outfile=main.js --format=cjs --platform=node --external:obsidian --jsx=automatic",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "keywords": [],
   "author": "NoMansBacon",
@@ -26,7 +29,8 @@
     "fast-glob": "^3.3.2",
     "obsidian": "latest",
     "tslib": "2.4.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vitepress": "^1.0.0"
   },
   "dependencies": {
     "react": "^18.3.1",
