--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,26 @@ theme:
   features:
     - navigation.instant
     - navigation.sections
+    - navigation.tabs
+    - navigation.top
     - navigation.tracking
     - content.code.copy
+  palette:
+    - scheme: default
+      primary: deep purple
+      accent: amber
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - scheme: slate
+      primary: deep purple
+      accent: amber
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
+  font:
+    text: "Inter"
+    code: "Fira Code"
 
 nav:
   - Home: index.md
@@ -22,3 +40,4 @@ markdown_extensions:
       permalink: true
   - tables
   - fenced_code
+  - attr_list
