update to legal and final clean up

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "daggerheart-tooltips",
-  "name": "Daggerheart Tooltips",
+  "name": "DH-UI Character Sheets",
   "version": "0.1.0",
   "minAppVersion": "1.5.0",
   "description": "Hover tooltips and traits cards.",
