Link update and name fixes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: DaggerHeart-UI Character Sheets
+site_name: DaggerHeart-UI
 site_description: Obsidian plugin that turns fenced code blocks into rich, live-updating Daggerheart UI.
 site_url: https://NoMansbacon.github.io/Daggerheart-UI/
 repo_url: https://github.com/NoMansbacon/Daggerheart-UI
